Add Flask email summarizer and update .gitignore
Introduces a Flask server (rurik_server.py.save) that summarizes emails using a local LLM API. Adds a requirements.txt for dependencies and expands .gitignore to cover virtual environments, logs, and practice folders.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
+# Ignore virtual environments
 venv/
-*.save
+.venv/
+
+# Ignore log files and folders
+logs/
+*.log
+
+# Ignore GitHub practice or temp folders
+git-practice/
